--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Swoop</title>
+
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Swoop</h1>
-    <img src="images.jpg" alt="">
+    <img src="https://goeags.com/images/2020/3/31/20atZoomBackgroundSwoop2.jpg" alt="Swoop"></img>
 </body>
 </html>
